default.css: popups: +left spacing for '[HTML]' in links like Arxiv links (currently has zero, which seems like simply an oversight in re-adding spaces to all the jammed-together <span>s)

--- a/css/default.css
+++ b/css/default.css
@@ -4918,6 +4918,7 @@ section.highlight-fading::before {
 .annotation .originalURL,
 .annotation-partial .originalURL {
     font-variant-caps: small-caps;
+    margin-left: 0.25em;
 }
 .annotation div.data-field.annotation-abstract {
     margin-top: 0.5em;
@@ -5715,12 +5716,12 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
     flex-flow: column;
     z-index: 1;
     opacity: 1;
-    transition: 
+    transition:
     	opacity 0.1s ease-out,
     	bottom 0.1s ease-out;
 }
 #console.hidden {
-    transition: 
+    transition:
     	opacity 0.1s ease-in,
     	bottom 0.1s ease-in;
 }
