pop-frame title: rm '[ARCHIVED]' entirely as redundant/hard to get right
putting it suffix raises problems of its own: what happens with *long* titles? since I don't like it at the beginning and it's problematic at the end, and strategies like truncating titles are increasingly complex and unsatisfactory, worth asking, why have it at all? the archive link will be in the annotation itself, after all. no good answer right now, so let's just delete it and see if we miss it. (We probably won't.)

--- a/templates/include/pop-frame-title-annotation.tmpl
+++ b/templates/include/pop-frame-title-annotation.tmpl
@@ -4,13 +4,7 @@
     title="Open <{originalURL}> in <{whichTab}> <{tabOrWindow}>."
     href="<{originalURL}>"
     target="<{linkTarget}>"
-        ><{popFrameTitleText}></a><span class="separator">·</span>
-[<a
-    class="popframe-title-link-archived"
-    title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
-    href="<{titleLinkHref}>"
-    target="<{linkTarget}>"
-        >ARCHIVED</a>]
+        ><{popFrameTitleText}></a>
 <[ELSE]>
 <a
     class="popframe-title-link"
