--- a/templates/default.html
+++ b/templates/default.html
@@ -149,6 +149,8 @@
         <div id="footer">
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not"><em>Submit Anonymous Feedback</em></a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
+
+          <a class="include" href="/metadata/today-quote.html">Quote Of The Day</a>
         </div>
 
       </article>
