--- a/templates/default.html
+++ b/templates/default.html
@@ -36,8 +36,8 @@
     <meta name="author" content="Gwern Branwen">
     <meta name="citation_author" content="Gwern Branwen">
     $endif$
-    <meta name="contact" content="https://www.gwern.net/Links#contact">
-    <link rel="index" title="Gwern.net homepage" href="https://www.gwern.net/index">
+    <meta name="contact" content="https://gwern.net/Links#contact">
+    <link rel="index" title="Gwern.net homepage" href="https://gwern.net/index">
     <link href="https://gwern.substack.com/feed" type="application/rss+xml" rel="alternate" title="ATOM/RSS feed of Gwern.net newsletters with additions and links.">
 
     <meta name="twitter:creator" content="gwern">
@@ -46,9 +46,9 @@
     <meta name="og:type" content="article">
     $if(description)$<meta name="description" content="$description$">
     <meta name="og:description" content="$description$">$endif$
-    $if(thumbnail)$<meta property="og:image" content="https://www.gwern.net$thumbnailSmall$">
+    $if(thumbnail)$<meta property="og:image" content="https://gwern.net$thumbnailSmall$">
     $if(thumbnailText)$<meta property="og:image:alt" content="$thumbnailText$">$endif$
-    $else$<meta property="og:image" content="https://www.gwern.net/static/img/logo/logo-whitebg-large-border.png-530px.jpg">
+    $else$<meta property="og:image" content="https://gwern.net/static/img/logo/logo-whitebg-large-border.png-530px.jpg">
     <meta property="og:image:alt" content="Default thumbnail text: the Gwern.net site logo, a logotype of a large blackletter fraktur capital letter 'G' on a white background.">$endif$
     <meta property="og:image:height" content="$thumbnailHeight$">
     <meta property="og:image:width" content="$thumbnailWidth$">
@@ -60,11 +60,11 @@
     <link rel="schema.dcterms" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/">
     <meta name="dcterms.rights" content="CC PD-0">
     <meta name="dc.rights" content="https://creativecommons.org/publicdomain/zero/1.0/">
-    <link rel="canonical" href="https://www.gwern.net$url$">
-    <meta name="citation_fulltext_html_url" content="https://www.gwern.net$url$">
-    <meta name="og:url" content="https://www.gwern.net$url$">
+    <link rel="canonical" href="https://gwern.net$url$">
+    <meta name="citation_fulltext_html_url" content="https://gwern.net$url$">
+    <meta name="og:url" content="https://gwern.net$url$">
     <meta name="page-body-classes" content="$safeURL$ $cssExtension$">
-    <meta name="page-source" content="https://www.gwern.net$url$.page">
+    <meta name="page-source" content="https://gwern.net$url$.page">
     <meta name="citation_fulltext_world_readable" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
