gD/LM: create a 'newest' tag for heuristically-guessed most-recently-created annotations; rename /Links -> /me to reduce URL confusion here when linking newest in sidebar

--- a/404.page
+++ b/404.page
@@ -37,7 +37,7 @@ Try to remember... Other options:
 - [This Waifu Does Not Exist](/TWDNE "Branwen 2019"){.backlink-not .icon-not}
 - [Making Anime Faces With StyleGAN](/Faces "Branwen 2019"){.backlink-not .icon-not}
 - [About This Website](/About "Branwen 2010"){.backlink-not .icon-not}
-- [About Gwern](/Links "Branwen 2009"){.backlink-not .icon-not}
+- [About Gwern](/me "Branwen 2009"){.backlink-not .icon-not}
 - [Spaced Repetition for Efficient Learning](/Spaced-repetition "Branwen 2009"){.backlink-not .icon-not}
 - [My Ordinary Life: Improvements Since the 1990s](/Improvements "Branwen 2018"){.backlink-not .icon-not}
 - [Laws of Tech: Commoditize Your Complement](/Complement "Branwen 2018"){.backlink-not .icon-not}
