--- a/templates/default.html
+++ b/templates/default.html
@@ -36,7 +36,7 @@
     <meta name="author" content="Gwern Branwen">
     <meta name="citation_author" content="Gwern Branwen">
     $endif$
-    <meta name="contact" content="https://gwern.net/Links#contact">
+    <meta name="contact" content="https://gwern.net/me#contact">
     <link rel="index" title="Gwern.net homepage" href="https://gwern.net/index">
     <link href="https://gwern.substack.com/feed" type="application/rss+xml" rel="alternate" title="ATOM/RSS feed of Gwern.net newsletters with additions and links.">
 
@@ -86,10 +86,11 @@
           <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div id="sidebar-links">
-        <a class="site  link-page link-annotated" href="/About"            title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="links link-page link-annotated" href="/Links"            title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
-        <a class="new   link-page link-annotated" href="/Changelog"        title="Changelog of what's new or updated">Changes</a>
+        <a class="site  link-page link-annotated" href="/About"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
+        <a class="links link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
         <a class="mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
+        <a class="annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
         <a class="patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br><span>PATREON</span></a>
         </div>
       </nav>
