--- a/templates/default.html
+++ b/templates/default.html
@@ -87,7 +87,7 @@
         </a>
         <div id="sidebar-links">
         <a class="site  link-page link-annotated" href="/About"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="links link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
         <a class="new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
         <a class="mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
