--- a/templates/default.html
+++ b/templates/default.html
@@ -125,15 +125,15 @@
         <noscript><div id="noscript-warning-footer" class="admonition error"><div class="admonition-title"><p>[<strong>Error</strong>: JS disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to transclude.]</p></div></noscript>
         $if(backlinksYes)$<section id="backlinks-section" class="level1">
           <h1><a href="#backlinks-section" title="Link to section: § 'Further Reading'">Further Reading</a></h1>
-          <a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">backlinks</a>
+          <a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">[backlinks]</a>
         </section>$endif$
         $if(linkbibYes)$<section id="link-bibliography-section" class="level1">
           <h1><a href="#link-bibliography-section" title="Link to section: § 'Link Bibliography'">Link Bibliography</a></h1>
-          <a id="link-bibliography" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">Link Bibliography</a>$endif$
+          <a id="link-bibliography" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">[link bibliography]</a>$endif$
         </section>
         $if(similarsYes)$<section id="similars-section" class="level1">
           <h1><a href="#similars-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
-          <a id="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="similars include-strict">similar</a>
+          <a id="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="similars include-strict">[similar]</a>
           </section>$endif$
           $endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
@@ -151,7 +151,7 @@
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not"><em>Submit Anonymous Feedback</em></a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
-          <a class="include" href="/metadata/today-quote.html">Quote Of The Day</a>
+          <a class="include" href="/metadata/today-quote.html">[Quote Of The Day]</a>
         </div>
 
       </article>
