--- a/templates/default.html
+++ b/templates/default.html
@@ -86,12 +86,12 @@
           <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div id="sidebar-links">
-        <a class="site  link-page link-annotated" href="/About"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
-        <a class="new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
-        <a class="mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
-        <a class="annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
-        <a class="patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br><span>PATREON</span></a>
+        <a class="icon-not site  link-page link-annotated" href="/About"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
+        <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="icon-not new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
+        <a class="icon-not mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
+        <a class="icon-not annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
+        <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br><span>PATREON</span></a>
         </div>
       </nav>
 
@@ -108,11 +108,11 @@
               $if(author)$ <span id="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
               <span id="page-date-range"><span id="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span id="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.page" class="icon-not" href="$url$.page"><span id="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
               <span id="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
-              <span id="page-confidence"><a href="/About#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
-              <span id="page-importance"><a href="/About#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
-              $if(backlinksYes)$<span class="backlinks"><a class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
-              $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
-              $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
+              <span id="page-confidence"><a href="/About#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')" class="icon-not">certainty</a>: <em>$confidence$</em></span>
+              <span id="page-importance"><a href="/About#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world." class="icon-not">importance</a>: <em>$importance$</em></span>
+              $if(backlinksYes)$<span class="backlinks"><a class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="icon-not">backlinks</a></span>$endif$
+              $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding)." class="icon-not">similar</a></span>$endif$
+              $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" title="Bibliography of links cited in this page (forward citations)." class="icon-not">bibliography</a></span>$endif$
           </div>
         </div>
         $endif$
@@ -148,7 +148,7 @@
         </nav>
 
         <div id="footer">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not"><em>Submit Anonymous Feedback</em></a></p>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback"><em>[Submit Anonymous Feedback]</em></a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
           <a class="include" href="/metadata/today-quote.html">[Quote Of The Day]</a>
