default.html: anonymous feedback link: switch from italics to smallcaps to avoid visual redundancy with the italicized epigraph in the Quote of the Day right underneath

--- a/templates/default.html
+++ b/templates/default.html
@@ -148,7 +148,7 @@
         </nav>
 
         <div id="footer">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback"><em>[Submit Anonymous Feedback]</em></a></p>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback"><span class="smallcaps">[Submit Anonymous Feedback]</span></a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
           <a class="include" href="/metadata/today-quote.html">[Quote Of The Day]</a>
@@ -159,7 +159,6 @@
 
     <!-- SSI: Versioned external CSS/JS assets -->
     <!-- INLINED-FOOT-BEGIN --><!--#include virtual="/static/includes/inlined-foot.html" --><!-- INLINED-FOOT-END -->
-
 
     <!-- 2×2 A/B test of indentation vs newlining, and justified vs not  -->
     <script id="justificationindentation-abtest-js">
