+; rewrite all '<br>' uses to be consistently '<br />' (tired of inconsistency and automated tooling disagreeing)

--- a/404.page
+++ b/404.page
@@ -20,7 +20,7 @@ error404: true
 </figure>
 
 <div class="epigraph">
-> "Every shrub, every tree—<br />if one has not forgotten<br />where they were planted—<br />has beneath the fallen snow<br />some vestige of its form."
+> Every shrub, every tree—<br />if one has not forgotten<br />where they were planted—<br />has beneath the fallen snow<br />some vestige of its form.
 >
 > —<a href="https://en.wikipedia.org/wiki/Sh%C5%8Dtetsu" class="backlink-not id-not link-annotated link-live" title="WP: Shōtetsu (正徹, 1381–1459 CE) was a Japanese poet during the Muromachi period, and is considered to have been the last poet in the courtly waka tradition; a number of his disciples were important in the development of the renga art form, which led to the haiku.">Shōtetsu</a>
 </div>
