--- a/templates/default.html
+++ b/templates/default.html
@@ -91,7 +91,7 @@
         <a class="icon-not new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
         <a class="icon-not mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="icon-not annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
-        <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br><span>PATREON</span></a>
+        <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br /><span>PATREON</span></a>
         </div>
       </nav>
 
