--- a/templates/default.html
+++ b/templates/default.html
@@ -86,9 +86,9 @@
           <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div id="sidebar-links">
-        <a class="icon-not site  link-page link-annotated" href="/About"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
+        <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
         <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
-        <a class="icon-not new   link-page link-annotated" href="/Changelog"             title="Changelog of what's new or updated">Changes</a>
+        <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
         <a class="icon-not mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="icon-not annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
         <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br /><span>PATREON</span></a>
@@ -117,7 +117,7 @@
         </div>
         $endif$
 
-        <noscript><div id="noscript-warning-header" class="admonition warning"><div class="admonition-title"><p>[<strong>Warning</strong>: JS Disabled!]</p></div> <p>[For support of <a href="/Design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (tablesorting, collapsible sections, image zooming, link annotation popups/popins & transclusions, sidenotes), please enable JavaScript.]</p></div></noscript>
+        <noscript><div id="noscript-warning-header" class="admonition warning"><div class="admonition-title"><p>[<strong>Warning</strong>: JS Disabled!]</p></div> <p>[For support of <a href="/design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (tablesorting, collapsible sections, image zooming, link annotation popups/popins & transclusions, sidenotes), please enable JavaScript.]</p></div></noscript>
 
         $body$
 
